syntax = "proto3";

package freki;

// Freki RAG Service (Ragnarok uses this for optional RAG context retrieval)
service FrekiService {
    rpc RetrieveContext(RetrieveContextRequest) returns (RetrieveContextResponse);
}

message RetrieveContextRequest {
    bytes query_embedding = 1;
    uint64 limit = 2;
    string collection_name = 3;
}

message RetrieveContextResponse {
    repeated RetrievedDocument documents = 1;
    repeated float relevance_scores = 2;
}

message RetrievedDocument {
    string id = 1;
    string content = 2;
    map<string, string> metadata = 3;
    float score = 4;
}
